crates/test-ui/ui/msg_send_invalid_receiver.stderr
error[E0308]: mismatched types
 --> ui/msg_send_invalid_receiver.rs
  |
  |     let _: Allocated<NSObject> = unsafe { msg_send_id![obj, alloc] };
  |                                           -------------^^^--------
  |                                           |            |
  |                                           |            expected `&AnyClass`, found `&NSObject`
  |                                           arguments to this function are incorrect
  |
  = note: expected reference `&AnyClass`
             found reference `&NSObject`
note: associated function defined here
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send_retained.rs
  |
  |     pub unsafe fn send_message_retained_alloc<T: Message, R: MaybeUnwrap<Input = Allocated<T>>>(
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
 --> ui/msg_send_invalid_receiver.rs
  |
  |     let _: Retained<NSObject> = unsafe { msg_send_id![obj, init] };
  |                                          -------------^^^-------
  |                                          |            |
  |                                          |            expected `Allocated<_>`, found `&NSObject`
  |                                          arguments to this function are incorrect
  |
  = note: expected struct `Allocated<_>`
          found reference `&NSObject`
note: associated function defined here
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send_retained.rs
  |
  |     unsafe fn send_message_retained<A: ConvertArguments, R: MaybeUnwrap<Input = U>>(
  |               ^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
 --> ui/msg_send_invalid_receiver.rs
  |
  |     let _: Retained<NSObject> = unsafe { msg_send_id![cls, init] };
  |                                          -------------^^^-------
  |                                          |            |
  |                                          |            expected `Allocated<_>`, found `&AnyClass`
  |                                          arguments to this function are incorrect
  |
  = note: expected struct `Allocated<_>`
          found reference `&AnyClass`
note: associated function defined here
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send_retained.rs
  |
  |     unsafe fn send_message_retained<A: ConvertArguments, R: MaybeUnwrap<Input = U>>(
  |               ^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
 --> ui/msg_send_invalid_receiver.rs
  |
  |     let _: Retained<NSObject> = unsafe { msg_send_id![obj, init] };
  |                                          -------------^^^-------
  |                                          |            |
  |                                          |            expected `Allocated<_>`, found `Retained<NSObject>`
  |                                          arguments to this function are incorrect
  |
  = note: expected struct `Allocated<_>`
             found struct `Retained<NSObject>`
note: associated function defined here
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send_retained.rs
  |
  |     unsafe fn send_message_retained<A: ConvertArguments, R: MaybeUnwrap<Input = U>>(
  |               ^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
 --> ui/msg_send_invalid_receiver.rs
  |
  |     let _: Retained<NSObject> = unsafe { msg_send_id![obj, init] };
  |                                          -------------^^^-------
  |                                          |            |
  |                                          |            expected `Allocated<_>`, found `Option<Retained<NSObject>>`
  |                                          arguments to this function are incorrect
  |
  = note: expected struct `Allocated<_>`
               found enum `Option<Retained<NSObject>>`
note: associated function defined here
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send_retained.rs
  |
  |     unsafe fn send_message_retained<A: ConvertArguments, R: MaybeUnwrap<Input = U>>(
  |               ^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `Retained<NSObject>: MessageReceiver` is not satisfied
 --> ui/msg_send_invalid_receiver.rs
  |
  |     let _: Retained<NSObject> = unsafe { msg_send_id![obj, new] };
  |                                          ^^^^^^^^^^^^^^^^^^^^^^ the trait `MessageReceiver` is not implemented for `Retained<NSObject>`
  |
  = help: the following other types implement trait `MessageReceiver`:
            &AnyClass
            &T
            &mut AnyObject
            *const AnyClass
            *const T
            *mut T
            NonNull<T>
  = note: required for `Retained<NSObject>` to implement `MsgSend`
  = note: required for `RetainSemantics<1>` to implement `MsgSendRetained<Retained<NSObject>, Option<Retained<_>>>`
  = note: this error originates in the macro `msg_send_id` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Retained<NSObject>: MessageReceiver` is not satisfied
 --> ui/msg_send_invalid_receiver.rs
  |
  |     let _: Retained<NSObject> = unsafe { msg_send_id![obj, copy] };
  |                                          ^^^^^^^^^^^^^^^^^^^^^^^ the trait `MessageReceiver` is not implemented for `Retained<NSObject>`
  |
  = help: the following other types implement trait `MessageReceiver`:
            &AnyClass
            &T
            &mut AnyObject
            *const AnyClass
            *const T
            *mut T
            NonNull<T>
  = note: required for `Retained<NSObject>` to implement `MsgSend`
  = note: required for `RetainSemantics<4>` to implement `MsgSendRetained<Retained<NSObject>, Option<Retained<_>>>`
  = note: this error originates in the macro `$crate::__msg_send_id_helper` which comes from the expansion of the macro `msg_send_id` (in Nightly builds, run with -Z macro-backtrace for more info)
